# FIT-VUT

./: .gitignore  CMakeLists.txt  Makefile  README.md  args.txt  dhcp-stats  dhcp-stats.1  juju
1/: .gitignore  cipher.txt  script.sh  test.txt
1/aux/: output2.csv
1/calculators/: LineMandelCalculator.cc  LineMandelCalculator.h
1/src/: Training.hs
1_sat/: queens.py  test.out
2/: ec.py  regrese.ipynb  verohodnost.ipynb
2/doc/: 240551.tex  report.tex
2/tests/: complex_run.in  error_move_left.in  invalid_rule_format.in  simple_test_01.in  simple_test_04.in  simple_test_05.in
2_smt/: xkouma02.smt
Docs/: dokumentace.tex
Sources/: calculator.c  fsm.c  main.c  matlib.c  uart.c
Sources/headers/: common.h  matlib.h  result_array.h  uart.h
bc/IAM/: shrek.ipynb
bc/IDS/: README.md
bc/IPP/: README.md
bc/ISA/: README.md
bc/IZG/: README.md
bc/IZV/: activate.sh
dhcp_files/: dhcp.pcap  generator.py
docs/tex_src/: Makefile  manual.tex  references.bib
holik_smt/: dmgz.py  hypersudoku.py  planovac.py  run.sh
part1/: part01.py
part2/: analysis.ipynb  analysis.py
part3/: geo.py
proj1/: README.md  admin_product_operations.feature  user_cart.feature  user_product_list.feature  user_product_search.feature
proj2/: bench.sl  get_driver.py  main.cpp
src/: AllocList.cpp  alloc_list.cpp  argument_processor.cpp  dhcp-stats.cpp  ip_address_manager.cpp  ip_address_parser.cpp  packet_sniffer.cpp
tests/: CMakeLists.txt  alloc_list_tests.cpp  cmdl_args_parsing_tests.cpp  ip_addr_parsing_tests.cpp  ip_address_manager_tests.cpp
tests/aux/: test_utils.cpp
(+74 files in other folders)
